--- a/src/ProtonDrive.App.Windows/Resources/Strings.be-BY.resx
+++ b/src/ProtonDrive.App.Windows/Resources/Strings.be-BY.resx
@@ -1436,6 +1436,15 @@
   <data name="ReleaseNoteType_Value_Improvement">
     <value>Паляпшэнні</value>
   </data>
+  <data name="SecondFactorInputPage_Value_Fido2">
+    <value>Ключ бяспекі</value>
+  </data>
+  <data name="SecondFactorInputPage_Value_NotSupported">
+    <value></value>
+  </data>
+  <data name="SecondFactorInputPage_Value_Totp">
+    <value>Праграма аўтэнтыфікацыі</value>
+  </data>
   <data name="SessionStatus_Value_Ending">
     <value>Адбываецца выхад...</value>
   </data>
@@ -1470,6 +1479,9 @@
     <value>_Забылі свой пароль?</value>
     <comment>The underscore (_) denotes an access key, which enhances the app's accessibility by allowing users to press the letter following the underscore instead of using a mouse to click the button.</comment>
   </data>
+  <data name="SignIn_Button_LearnMore">
+    <value>Даведацца больш</value>
+  </data>
   <data name="SignIn_Button_SignIn">
     <value>_Увайсці</value>
     <comment>The underscore (_) denotes an access key, which enhances the app's accessibility by allowing users to press the letter following the underscore instead of using a mouse to click the button.</comment>
@@ -1487,12 +1499,21 @@
   <data name="SignIn_Text_2FACode">
     <value>Увядзіце код з вашай праграмы аўтэнтыфікацыі</value>
   </data>
+  <data name="SignIn_Text_No2FAMethodFound">
+    <value>Не знойдзены спосаб двухфактарнай аўтэнтыфікацыі.</value>
+  </data>
   <data name="SignIn_Text_Password">
     <value>_Пароль</value>
     <comment>The underscore (_) denotes an access key, which enhances the app's accessibility by allowing users to press the letter following the underscore instead of using a mouse to click the button.</comment>
   </data>
   <data name="SignIn_Text_SecondPassword">
     <value>Другі пароль</value>
+  </data>
+  <data name="SignIn_Text_SecurityKey">
+    <value>Устаўце ключ бяспекі, які звязаны з вашым уліковым запісам Proton.</value>
+  </data>
+  <data name="SignIn_Text_SecurityKeyNotSupported">
+    <value>Ваша сістэма не падтрымлівае ключ бяспекі</value>
   </data>
   <data name="SignIn_Text_Username">
     <value>Электронная пошта або _імя карыстальніка</value>
