--- a/src/ProtonDrive.App.Windows/Resources/Strings.fr.resx
+++ b/src/ProtonDrive.App.Windows/Resources/Strings.fr.resx
@@ -1436,6 +1436,15 @@ Le contenu des fichiers sera téléchargé à la demande uniquement.</value>
   <data name="ReleaseNoteType_Value_Improvement">
     <value>Améliorations</value>
   </data>
+  <data name="SecondFactorInputPage_Value_Fido2">
+    <value>Clé de sécurité</value>
+  </data>
+  <data name="SecondFactorInputPage_Value_NotSupported">
+    <value></value>
+  </data>
+  <data name="SecondFactorInputPage_Value_Totp">
+    <value>Application d'authentification</value>
+  </data>
   <data name="SessionStatus_Value_Ending">
     <value>Déconnexion...</value>
   </data>
@@ -1470,6 +1479,9 @@ Le contenu des fichiers sera téléchargé à la demande uniquement.</value>
     <value>Avez-vous _oublié votre mot de passe ?</value>
     <comment>The underscore (_) denotes an access key, which enhances the app's accessibility by allowing users to press the letter following the underscore instead of using a mouse to click the button.</comment>
   </data>
+  <data name="SignIn_Button_LearnMore">
+    <value>En savoir plus</value>
+  </data>
   <data name="SignIn_Button_SignIn">
     <value>_Connexion</value>
     <comment>The underscore (_) denotes an access key, which enhances the app's accessibility by allowing users to press the letter following the underscore instead of using a mouse to click the button.</comment>
@@ -1487,12 +1499,21 @@ Le contenu des fichiers sera téléchargé à la demande uniquement.</value>
   <data name="SignIn_Text_2FACode">
     <value>Saisissez le code de votre application d'authentification.</value>
   </data>
+  <data name="SignIn_Text_No2FAMethodFound">
+    <value>Aucune méthode d'authentification à deux facteurs n'a été trouvée.</value>
+  </data>
   <data name="SignIn_Text_Password">
     <value>_Mot de passe</value>
     <comment>The underscore (_) denotes an access key, which enhances the app's accessibility by allowing users to press the letter following the underscore instead of using a mouse to click the button.</comment>
   </data>
   <data name="SignIn_Text_SecondPassword">
     <value>Second mot de passe</value>
+  </data>
+  <data name="SignIn_Text_SecurityKey">
+    <value>Insérez une clé de sécurité associée à votre Proton Account.</value>
+  </data>
+  <data name="SignIn_Text_SecurityKeyNotSupported">
+    <value>Votre système ne prend pas en charge les clés de sécurité.</value>
   </data>
   <data name="SignIn_Text_Username">
     <value>Adresse e-mail ou nom d'_utilisateur</value>
