--- a/src/ProtonDrive.App.Windows/Resources/Strings.hu.resx
+++ b/src/ProtonDrive.App.Windows/Resources/Strings.hu.resx
@@ -1431,6 +1431,15 @@
   <data name="ReleaseNoteType_Value_Improvement">
     <value>Fejlesztések</value>
   </data>
+  <data name="SecondFactorInputPage_Value_Fido2">
+    <value>Security key</value>
+  </data>
+  <data name="SecondFactorInputPage_Value_NotSupported">
+    <value></value>
+  </data>
+  <data name="SecondFactorInputPage_Value_Totp">
+    <value>Authenticator app</value>
+  </data>
   <data name="SessionStatus_Value_Ending">
     <value>Kijelentkezés...</value>
   </data>
@@ -1465,6 +1474,9 @@
     <value>_Elfelejtette a jelszavát?</value>
     <comment>The underscore (_) denotes an access key, which enhances the app's accessibility by allowing users to press the letter following the underscore instead of using a mouse to click the button.</comment>
   </data>
+  <data name="SignIn_Button_LearnMore">
+    <value>Learn more</value>
+  </data>
   <data name="SignIn_Button_SignIn">
     <value>_Bejelentkezés</value>
     <comment>The underscore (_) denotes an access key, which enhances the app's accessibility by allowing users to press the letter following the underscore instead of using a mouse to click the button.</comment>
@@ -1482,12 +1494,21 @@
   <data name="SignIn_Text_2FACode">
     <value>Írja be a kódot a hitelesítő alkalmazásból</value>
   </data>
+  <data name="SignIn_Text_No2FAMethodFound">
+    <value>No two-factor authentication method found.</value>
+  </data>
   <data name="SignIn_Text_Password">
     <value>_Jelszó</value>
     <comment>The underscore (_) denotes an access key, which enhances the app's accessibility by allowing users to press the letter following the underscore instead of using a mouse to click the button.</comment>
   </data>
   <data name="SignIn_Text_SecondPassword">
     <value>Második jelszó</value>
+  </data>
+  <data name="SignIn_Text_SecurityKey">
+    <value>Insert a security key linked to your Proton Account.</value>
+  </data>
+  <data name="SignIn_Text_SecurityKeyNotSupported">
+    <value>Your system does not support security key</value>
   </data>
   <data name="SignIn_Text_Username">
     <value>Email cím vagy _felhasználónév</value>
