--- a/src/ProtonDrive.App.Windows/Resources/Strings.id.resx
+++ b/src/ProtonDrive.App.Windows/Resources/Strings.id.resx
@@ -1436,6 +1436,15 @@ Konten berkas hanya akan diunduh apabila diminta.</value>
   <data name="ReleaseNoteType_Value_Improvement">
     <value>Peningkatan</value>
   </data>
+  <data name="SecondFactorInputPage_Value_Fido2">
+    <value>Security key</value>
+  </data>
+  <data name="SecondFactorInputPage_Value_NotSupported">
+    <value></value>
+  </data>
+  <data name="SecondFactorInputPage_Value_Totp">
+    <value>Authenticator app</value>
+  </data>
   <data name="SessionStatus_Value_Ending">
     <value>Sedang keluar…</value>
   </data>
@@ -1470,6 +1479,9 @@ Konten berkas hanya akan diunduh apabila diminta.</value>
     <value>_Lupa kata sandi Anda?</value>
     <comment>The underscore (_) denotes an access key, which enhances the app's accessibility by allowing users to press the letter following the underscore instead of using a mouse to click the button.</comment>
   </data>
+  <data name="SignIn_Button_LearnMore">
+    <value>Learn more</value>
+  </data>
   <data name="SignIn_Button_SignIn">
     <value>_Masuk</value>
     <comment>The underscore (_) denotes an access key, which enhances the app's accessibility by allowing users to press the letter following the underscore instead of using a mouse to click the button.</comment>
@@ -1487,12 +1499,21 @@ Konten berkas hanya akan diunduh apabila diminta.</value>
   <data name="SignIn_Text_2FACode">
     <value>Masukkan kode dari aplikasi autentikator Anda</value>
   </data>
+  <data name="SignIn_Text_No2FAMethodFound">
+    <value>No two-factor authentication method found.</value>
+  </data>
   <data name="SignIn_Text_Password">
     <value>_Kata sandi</value>
     <comment>The underscore (_) denotes an access key, which enhances the app's accessibility by allowing users to press the letter following the underscore instead of using a mouse to click the button.</comment>
   </data>
   <data name="SignIn_Text_SecondPassword">
     <value>Kata sandi kedua</value>
+  </data>
+  <data name="SignIn_Text_SecurityKey">
+    <value>Insert a security key linked to your Proton Account.</value>
+  </data>
+  <data name="SignIn_Text_SecurityKeyNotSupported">
+    <value>Your system does not support security key</value>
   </data>
   <data name="SignIn_Text_Username">
     <value>Email atau _nama pengguna</value>
