--- a/src/ProtonDrive.App.Windows/Resources/Strings.nb-NO.resx
+++ b/src/ProtonDrive.App.Windows/Resources/Strings.nb-NO.resx
@@ -1436,6 +1436,15 @@ Innholdet i filer vil kun bli lastet ned på forespørsel.</value>
   <data name="ReleaseNoteType_Value_Improvement">
     <value>Forbedringer</value>
   </data>
+  <data name="SecondFactorInputPage_Value_Fido2">
+    <value>Sikkerhetsnøkkel</value>
+  </data>
+  <data name="SecondFactorInputPage_Value_NotSupported">
+    <value></value>
+  </data>
+  <data name="SecondFactorInputPage_Value_Totp">
+    <value>Autentiseringsapp</value>
+  </data>
   <data name="SessionStatus_Value_Ending">
     <value>Logger av...</value>
   </data>
@@ -1470,6 +1479,9 @@ Innholdet i filer vil kun bli lastet ned på forespørsel.</value>
     <value>_Glemt passordet ditt?</value>
     <comment>The underscore (_) denotes an access key, which enhances the app's accessibility by allowing users to press the letter following the underscore instead of using a mouse to click the button.</comment>
   </data>
+  <data name="SignIn_Button_LearnMore">
+    <value>Lær mer</value>
+  </data>
   <data name="SignIn_Button_SignIn">
     <value>_Logg på</value>
     <comment>The underscore (_) denotes an access key, which enhances the app's accessibility by allowing users to press the letter following the underscore instead of using a mouse to click the button.</comment>
@@ -1487,12 +1499,21 @@ Innholdet i filer vil kun bli lastet ned på forespørsel.</value>
   <data name="SignIn_Text_2FACode">
     <value>Skriv inn koden fra autentiseringsappen</value>
   </data>
+  <data name="SignIn_Text_No2FAMethodFound">
+    <value>Ingen tofaktorautentiseringsmetode funnet.</value>
+  </data>
   <data name="SignIn_Text_Password">
     <value>_Passord</value>
     <comment>The underscore (_) denotes an access key, which enhances the app's accessibility by allowing users to press the letter following the underscore instead of using a mouse to click the button.</comment>
   </data>
   <data name="SignIn_Text_SecondPassword">
     <value>Andre passord</value>
+  </data>
+  <data name="SignIn_Text_SecurityKey">
+    <value>Sett inn en sikkerhetsnøkkel knyttet til Proton-kontoen din.</value>
+  </data>
+  <data name="SignIn_Text_SecurityKeyNotSupported">
+    <value>Systemet ditt støtter ikke sikkerhetsnøkkel</value>
   </data>
   <data name="SignIn_Text_Username">
     <value>E-post eller _brukernavn</value>
