--- a/src/ProtonDrive.App.Windows/Resources/Strings.pl.resx
+++ b/src/ProtonDrive.App.Windows/Resources/Strings.pl.resx
@@ -1436,6 +1436,15 @@ Zawartość plików będzie pobierana na żądanie.</value>
   <data name="ReleaseNoteType_Value_Improvement">
     <value>Ulepszenia</value>
   </data>
+  <data name="SecondFactorInputPage_Value_Fido2">
+    <value>Klucz bezpieczeństwa</value>
+  </data>
+  <data name="SecondFactorInputPage_Value_NotSupported">
+    <value></value>
+  </data>
+  <data name="SecondFactorInputPage_Value_Totp">
+    <value>Aplikacja uwierzytelniająca</value>
+  </data>
   <data name="SessionStatus_Value_Ending">
     <value>Wylogowywanie...</value>
   </data>
@@ -1470,6 +1479,9 @@ Zawartość plików będzie pobierana na żądanie.</value>
     <value>Nie pamiętasz hasła?</value>
     <comment>The underscore (_) denotes an access key, which enhances the app's accessibility by allowing users to press the letter following the underscore instead of using a mouse to click the button.</comment>
   </data>
+  <data name="SignIn_Button_LearnMore">
+    <value>Dowiedz się więcej</value>
+  </data>
   <data name="SignIn_Button_SignIn">
     <value>Zaloguj się</value>
     <comment>The underscore (_) denotes an access key, which enhances the app's accessibility by allowing users to press the letter following the underscore instead of using a mouse to click the button.</comment>
@@ -1487,12 +1499,21 @@ Zawartość plików będzie pobierana na żądanie.</value>
   <data name="SignIn_Text_2FACode">
     <value>Wpisz kod z aplikacji uwierzytelniającej</value>
   </data>
+  <data name="SignIn_Text_No2FAMethodFound">
+    <value>No two-factor authentication method found.</value>
+  </data>
   <data name="SignIn_Text_Password">
     <value>Hasło</value>
     <comment>The underscore (_) denotes an access key, which enhances the app's accessibility by allowing users to press the letter following the underscore instead of using a mouse to click the button.</comment>
   </data>
   <data name="SignIn_Text_SecondPassword">
     <value>Drugie hasło</value>
+  </data>
+  <data name="SignIn_Text_SecurityKey">
+    <value>Insert a security key linked to your Proton Account.</value>
+  </data>
+  <data name="SignIn_Text_SecurityKeyNotSupported">
+    <value>Your system does not support security key</value>
   </data>
   <data name="SignIn_Text_Username">
     <value>Adres e-mail lub nazwa użytkownika</value>
