--- a/src/ProtonDrive.App.Windows/Resources/Strings.pt.resx
+++ b/src/ProtonDrive.App.Windows/Resources/Strings.pt.resx
@@ -1436,6 +1436,15 @@ O conteúdo do ficheiro será transferido apenas a pedido.</value>
   <data name="ReleaseNoteType_Value_Improvement">
     <value>Melhorias</value>
   </data>
+  <data name="SecondFactorInputPage_Value_Fido2">
+    <value>Security key</value>
+  </data>
+  <data name="SecondFactorInputPage_Value_NotSupported">
+    <value></value>
+  </data>
+  <data name="SecondFactorInputPage_Value_Totp">
+    <value>Authenticator app</value>
+  </data>
   <data name="SessionStatus_Value_Ending">
     <value>A terminar sessão...</value>
   </data>
@@ -1470,6 +1479,9 @@ O conteúdo do ficheiro será transferido apenas a pedido.</value>
     <value>_Esqueceu a sua palavra-passe?</value>
     <comment>The underscore (_) denotes an access key, which enhances the app's accessibility by allowing users to press the letter following the underscore instead of using a mouse to click the button.</comment>
   </data>
+  <data name="SignIn_Button_LearnMore">
+    <value>Learn more</value>
+  </data>
   <data name="SignIn_Button_SignIn">
     <value>_Iniciar sessão</value>
     <comment>The underscore (_) denotes an access key, which enhances the app's accessibility by allowing users to press the letter following the underscore instead of using a mouse to click the button.</comment>
@@ -1487,12 +1499,21 @@ O conteúdo do ficheiro será transferido apenas a pedido.</value>
   <data name="SignIn_Text_2FACode">
     <value>Introduza o código da sua aplicação de autenticação.</value>
   </data>
+  <data name="SignIn_Text_No2FAMethodFound">
+    <value>No two-factor authentication method found.</value>
+  </data>
   <data name="SignIn_Text_Password">
     <value>_Palavra-passe</value>
     <comment>The underscore (_) denotes an access key, which enhances the app's accessibility by allowing users to press the letter following the underscore instead of using a mouse to click the button.</comment>
   </data>
   <data name="SignIn_Text_SecondPassword">
     <value>Segunda palavra-passe</value>
+  </data>
+  <data name="SignIn_Text_SecurityKey">
+    <value>Insert a security key linked to your Proton Account.</value>
+  </data>
+  <data name="SignIn_Text_SecurityKeyNotSupported">
+    <value>Your system does not support security key</value>
   </data>
   <data name="SignIn_Text_Username">
     <value>E-mail ou nome de _utilizador</value>
