--- a/src/ProtonDrive.App.Windows/Resources/Strings.ru.resx
+++ b/src/ProtonDrive.App.Windows/Resources/Strings.ru.resx
@@ -530,7 +530,7 @@
     <value>Неизвестный пользователь</value>
   </data>
   <data name="Main_Account_Label_Account">
-    <value>Счёт</value>
+    <value>Аккаунт</value>
   </data>
   <data name="Main_Account_Label_Security">
     <value>Безопасность</value>
@@ -581,7 +581,7 @@
     <comment>The underscore (_) denotes an access key, which enhances the app's accessibility by allowing users to press the letter following the underscore instead of using a mouse to click the button.</comment>
   </data>
   <data name="Main_Account_Storage_Button_UpgradePlan">
-    <value>Улучшить план</value>
+    <value>Улучшить тариф</value>
   </data>
   <data name="Main_Account_Storage_Info_EnsureMoreStorage">
     <value>Чтобы обеспечить бесперебойную синхронизацию, получите больше хранилища прямо сейчас.</value>
@@ -599,7 +599,7 @@
     <value>Вы близки к достижению лимита хранилища.</value>
   </data>
   <data name="Main_Account_Title">
-    <value>Счёт</value>
+    <value>Аккаунт</value>
   </data>
   <data name="Main_Activity_Button_PauseSync">
     <value>_Приостановить синхронизацию</value>
@@ -1142,7 +1142,7 @@
     <value>Пункт меню: О программе</value>
   </data>
   <data name="Main_Sidebar_NavigationMenu_Item_Account">
-    <value>Счёт</value>
+    <value>Аккаунт</value>
   </data>
   <data name="Main_Sidebar_NavigationMenu_Item_Account_HelpText">
     <value>Пункт меню: Аккаунт</value>
@@ -1436,6 +1436,15 @@
   <data name="ReleaseNoteType_Value_Improvement">
     <value>Улучшения</value>
   </data>
+  <data name="SecondFactorInputPage_Value_Fido2">
+    <value>Security key</value>
+  </data>
+  <data name="SecondFactorInputPage_Value_NotSupported">
+    <value></value>
+  </data>
+  <data name="SecondFactorInputPage_Value_Totp">
+    <value>Authenticator app</value>
+  </data>
   <data name="SessionStatus_Value_Ending">
     <value>Выход...</value>
   </data>
@@ -1470,6 +1479,9 @@
     <value>_Забыли ваш пароль?</value>
     <comment>The underscore (_) denotes an access key, which enhances the app's accessibility by allowing users to press the letter following the underscore instead of using a mouse to click the button.</comment>
   </data>
+  <data name="SignIn_Button_LearnMore">
+    <value>Learn more</value>
+  </data>
   <data name="SignIn_Button_SignIn">
     <value>_Войти</value>
     <comment>The underscore (_) denotes an access key, which enhances the app's accessibility by allowing users to press the letter following the underscore instead of using a mouse to click the button.</comment>
@@ -1487,12 +1499,21 @@
   <data name="SignIn_Text_2FACode">
     <value>Введите код из приложения-аутентификатора</value>
   </data>
+  <data name="SignIn_Text_No2FAMethodFound">
+    <value>No two-factor authentication method found.</value>
+  </data>
   <data name="SignIn_Text_Password">
     <value>_Пароль</value>
     <comment>The underscore (_) denotes an access key, which enhances the app's accessibility by allowing users to press the letter following the underscore instead of using a mouse to click the button.</comment>
   </data>
   <data name="SignIn_Text_SecondPassword">
     <value>Второй пароль</value>
+  </data>
+  <data name="SignIn_Text_SecurityKey">
+    <value>Insert a security key linked to your Proton Account.</value>
+  </data>
+  <data name="SignIn_Text_SecurityKeyNotSupported">
+    <value>Your system does not support security key</value>
   </data>
   <data name="SignIn_Text_Username">
     <value>Электронная почта или _имя пользователя</value>
