--- a/src/ProtonDrive.App.Windows/Resources/Strings.zh-TW.resx
+++ b/src/ProtonDrive.App.Windows/Resources/Strings.zh-TW.resx
@@ -1435,6 +1435,15 @@
   <data name="ReleaseNoteType_Value_Improvement">
     <value>改進</value>
   </data>
+  <data name="SecondFactorInputPage_Value_Fido2">
+    <value>Security key</value>
+  </data>
+  <data name="SecondFactorInputPage_Value_NotSupported">
+    <value></value>
+  </data>
+  <data name="SecondFactorInputPage_Value_Totp">
+    <value>Authenticator app</value>
+  </data>
   <data name="SessionStatus_Value_Ending">
     <value>正在登出...</value>
   </data>
@@ -1469,6 +1478,9 @@
     <value>忘記您的密碼了嗎？</value>
     <comment>The underscore (_) denotes an access key, which enhances the app's accessibility by allowing users to press the letter following the underscore instead of using a mouse to click the button.</comment>
   </data>
+  <data name="SignIn_Button_LearnMore">
+    <value>Learn more</value>
+  </data>
   <data name="SignIn_Button_SignIn">
     <value>_登錄</value>
     <comment>The underscore (_) denotes an access key, which enhances the app's accessibility by allowing users to press the letter following the underscore instead of using a mouse to click the button.</comment>
@@ -1486,12 +1498,21 @@
   <data name="SignIn_Text_2FACode">
     <value>輸入驗證應用程式中的驗證代碼</value>
   </data>
+  <data name="SignIn_Text_No2FAMethodFound">
+    <value>No two-factor authentication method found.</value>
+  </data>
   <data name="SignIn_Text_Password">
     <value>密碼</value>
     <comment>The underscore (_) denotes an access key, which enhances the app's accessibility by allowing users to press the letter following the underscore instead of using a mouse to click the button.</comment>
   </data>
   <data name="SignIn_Text_SecondPassword">
     <value>第二密碼</value>
+  </data>
+  <data name="SignIn_Text_SecurityKey">
+    <value>Insert a security key linked to your Proton Account.</value>
+  </data>
+  <data name="SignIn_Text_SecurityKeyNotSupported">
+    <value>Your system does not support security key</value>
   </data>
   <data name="SignIn_Text_Username">
     <value>電子郵件或用戶名稱</value>
